--- a/index.html
+++ b/index.html
@@ -1,1 +1,44 @@
-<h1>Assignment 1</h1>
+<html>
+
+<body>
+
+<h1>My Website - Assignment 1</h1>
+
+<h2>Personal Information</h2>
+
+<p>My name is Marc Winbank (s3754277@student.rmit.edu.au) and I’m a 34 year old male living in the most isolated city in the world, Perth. After completing school in a small coastal town in NSW, I pursued a career in construction by completing a 4 year apprenticeship in carpentry. It was never my passion, so when I found myself in Western Australia, the resource center of Australia, I quit my job in pursuit of rocks, to become a geologist. My part-time job related to geology field, while studying, offered me the opportunity to live in Santiago, Chile, for a semester. A semester turned into 3 years, and in the meantime while my love for their culture and country (and a special lady, now wife) increased, my passion towards rocks fizzled. I continued to work throughout South America for this company, eventually becoming the regional operations manager. I enjoyed the role, and the desire to complete a degree was still there, therefore while travelling and working, I started studying again. I’m now nearing the completion of a degree with RMIT in Supply Chain and Logistics Management.</p>
+
+<h2>Interest in IT</h2>
+
+<p>My interest in IT is diverse. It’s truly a central part of everyday life now, however I was a late adopter. I grew up on essentially an island and I distinctly remember getting a family computer but being without internet until I was 11 or 12. There just was not the infrastructure where I lived. Instead, it was a means to play Age of Empires, Need for Speed II, Abe’s Odyssey, and Spyro the Dragon. My passion for gaming had already started with the Sega Mega System, but the family computer certainly assisted as well.
+As mentioned above, the event that sparked my decision to study at RMIT was while working away. There would be occasions on super remote mine sites where there was literally nothing to do after hours. So, when I was at home in Santiago, I would download as much content as possible to complete offline at these site locations, which often had very poor to no internet connection.
+I expect to be a well-rounded graduate. I find that I don’t have the drive to study, commit my life if you will, to a specific field. I love learning, I have been an avid reader since a young age, but I equally find myself losing interest after years of the same thing. Geology felt like it needed to be my life if I wanted to be successful. I needed to LOVE rocks. I didn’t have the passion of my colleagues. But, I did enjoy coordinating the resources. Logistics and supply chain provides the foundation to make coordination and decision decisions on hard data.</p>
+
+<h2>Personal Profile</h2>
+
+<h3>Myers-Briggs test</h3>
+
+<h4>Adventurer ISFP-T<h4/>
+
+<p>The statement in the ISFP-T conclusion ‘Adventurers need to put in a conscious effort to develop their weaker traits and additional skills’ certainly resonates with me. However, a repetitive trait mentioned throughout the summary was ‘creative and artistic freedom’. They got that one wrong. I have always felt that I really struggled being creative. Perhaps I just haven’t found the right means yet…
+Within a team I feel that I genuinely respect and appreciate each person’s input. I avoid conflict, and I don’t like letting others down. I can handle letting myself down, but I don’t like to fail others. In fact, I find myself regularly being the one to nominate for more workload, or speaking up to settle conflict at potential cost to myself.
+When forming a team, I feel that I can get along with most personality types. I get frustrated when someone doesn’t make a fair contribution, however I rarely chastise them, I’d rather help in a personal message or take the responsibility on myself.</p>
+
+<h4>PANAS test</h4>
+
+<p>The results of my personal PANAS test, are:
+Positive affect: 30
+Negative affect: 27
+The PANAS test, or Positive and Negative Affect Schedule, measures, as the extended name suggests, the susceptibility of positive and negative affect toward personality traits, i.e., moods and emotions. More specifically regarding the scale, ‘positive affect’ refers to the individual’s tendency to experience positive emotions, a more positive manner of interaction and engagement with others and with personal obstacles and challenges. On the other hand, ‘negative affect’ scales traits of a more negative or unpleasurable nature, perspectives of negative inclination towards things such as connections and surroundings.
+For each dimension of the PANAS scale, both positive and negative, the resulting score falls between 10 and 50. The scale of score indicates one’s general susceptibility of negative and positive affect, whereby in terms of positive affect, a score of <25 is considered low positive affect, 26-35 is moderate and >36 is high. As for negative affect, a score of <10 is considered low negative affect, 11-20 moderate, and >21 is high.</p>
+
+<h3>Project Idea</h3>
+
+<p>My app idea will be called ‘Hazard Identifier’ and, ideally, it will be utilized as a tool by local municipalities for hazard identification and rectification within their region. From things like drug paraphernalia, trip hazards, electrical hazards and even road potholes, the app will rely on citizen engagement to facilitate visibility of an action item for repair or clean-up. Additionally, other users can interact with an item that has already been reported. A user can nominate an ‘action urgency’ scale related to personal safety, from minor to significant threat. For example, a syringe found near to a children’s playground might be given a maximum-threat allocation to personal safety, alternatively, a developing street pothole may be given a low-threat allocation.
+The reason behind this idea stems from my experiences living within an urban environment close to the CBD of Perth, Western Australia. I like to jog along the waterfront, and in order to reach my destination I pass through a mix of high-density residential and business areas. It is on this route that I have found items such as discarded syringes and other drug paraphernalia, which got me thinking… how are potentially harmful items such as these identified and cleaned? Well, according to the Department of Health, Western Australia, I should attempt to dispose of it myself. There are guidelines found on their website, and the risk of infection is stated as low. Alternatively, they recommend searching ‘waste disposal’ in the Yellow Pages… We’re no longer living in the 90’s. In 2021 we can handle this better, we can do it more efficiently, and we can do it safer.
+Essentially, the app will require the user to take a photo of the hazard with their smart device, enter an optional brief description of the hazard, and have their locational data plotted on a map service such as Google or Apple Maps. Priority classification of the hazard can be automated to an extent by incorporating a drop-down selection menu when making an entry in addition to the brief, optional description. For example, classification from the drop-down menu such as ‘Sharps’ > ‘Syringe’ > ‘High Traffic Area’ would be flagged as a high-importance, priority action task for the team monitoring the app. On the other hand, a selection such as ‘Bodily Fluids’ > ‘Excrement’ > ‘Medium Traffic Area’ could be flagged as lower priority for rectification, albeit a troubling entry.
+The second area of the app facilitates interaction with the hazard that was posted by another user. Think along the lines of the navigation apps, Waze and Google Maps, whereby, for example, a traffic accident can be confirmed via a pop-up when other users pass close-by the tagged location. In my app, users can tap an option that either agrees or disputes the severity of the reported hazard. There would likely need to be continuous geolocation condition in order for this option to be reliable. Users should be able to have an overview of all reports to have the choice of actively avoiding a reported hazard, but to avoid manipulation of the severity ‘vote’, a proximity function would mean that only users in the immediate area are able to provide firsthand feedback on the report.
+Thirdly, active users of the app can be allocated a rating system, ala Uber, and a following option, ala Instagram or Facebook. This means that if another user in your community is reporting genuine, accurate hazards, their hazard reports can be verified to an extent based of their rating.  If a user has identified someone actively posting accurate hazards, they can be ‘followed’ and their reports can be associated with a pop-up notification, or their reports are highlighted in the app for the ‘follower’. The rating system can be calculated based on interaction of the reports by the clean-up team and/or the number of times other users agree/disagree with the hazard when interacting with the report.</p>
+
+</body>
+</html>
